# openqc-pipeline

./: .pre-commit-config.yaml  README.md  pyproject.toml
dashboards/: app.py
data/: spatiotemporal_sample.csv
openqc_pipeline/: cli.py
scripts/: generate_spatiotemporal_data.py
