[tool.poetry]
name = "openqc-pipeline"
version = "0.1.0"
description = "Scalable Data Quality Control & Visualization Toolkit for Spatiotemporal Research Data"
authors = ["Ati Arabshahi <https://github.com/AtiArabshahi>"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
keywords = ["data quality", "spatiotemporal", "visualization", "CLI"]
packages = [{ include = "openqc_pipeline" }]

[tool.poetry.scripts]
openqc = "openqc_pipeline.cli:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = ">=2.3.0,<3.0.0"
numpy = ">=2.3.0,<3.0.0"
scipy = ">=1.15.3,<2.0.0"
typer = {extras = ["all"], version = "^0.16.0"}
streamlit = "^1.46.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pytest = "^8.4.1"
coverage = "^7.9.1"
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
